<resources>
    <string name="app_name">WeCare</string>

    <string name="internet_problem">No internet access, please check your internet connection.</string>
    <string name="unknown_problem">Oops&#8230;something went wrong. Please try again in
        sometime.</string>
    <string name="activities">Activities</string>
    <string name="contact">Contact</string>
    <string name="website">Website : %s</string>
    <string name="email">Email : %s</string>
    <string name="facebook">Facebook : %s</string>
    <string name="twitter">Twitter : %s</string>
    <string name="progress">Progress - %1$s%%</string>
    <string name="starts_on">Started On</string>
    <string name="ends_on">Ends On</string>
    <string name="about">About</string>
    <string name="duration">Duration</string>
    <string name="joined">Joined : %s</string>
    <string name="founder">Founder : %s</string>
    <string name="ngo">NGO : %s</string>
    <string name="campaigns">Campaigns</string>
    <string name="ngos">Ngos</string>
    <string name="mission">Mission : %s</string>

</resources>
